# librilabs-translator-v2

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: backend-security.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 813dd91d1bac_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  document.py  translation.py  user.py
backend/app/routers/: health.py
backend/scripts/: validate-security.sh
backend/tests/: conftest.py
backend/tests/integration/: test_database_connection.py  test_migrations.py  test_models.py
backend/tests/integration/test_routers/: __init__.py  test_cors.py  test_cors_production.py  test_error_handling.py  test_health.py
backend/tests/unit/: test_config.py
docs/: ai-frontend-prompt.md  architecture.md  brainstorming-session-results.md  brief.md  competitor-analysis.md  front-end-spec.md  market-research.md  prd.md
docs/architecture/: api-specification.md  backend-architecture.md  checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  deployment-architecture.md  development-workflow.md  document-summary.md  (+11 more)
frontend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
(+36 files in other folders)
